# Puri-Psi

./: .gitignore  404.html  CMakeLists.txt  README.md  index.html  script.js  styles.css  the-grid-v2.css
cmake_files/: AddBenchmark.cmake  AddCPP11Flags.cmake  AddCatchTest.cmake  AddExample.cmake  CheckCXX11Features.cmake  FindBLAS.cmake  FindCCFits.cmake  FindCFitsIO.cmake  FindCasaCore.cmake  FindCasaRest.cmake  FindCatch.cmake  FindEigen3.cmake  FindGBenchmark.cmake  FindMKL.cmake  Findspdlog.cmake  LookUpPsi.cmake  PuriPsiConfig.in.cmake  PuriPsiConfigVersion.in.cmake  dependencies.cmake  export_puripsi.cmake  logging.cmake  rpath.cmake  version.cmake
cpp/: CMakeLists.txt  cmdl.cc  cmdl.h  main.cc
cpp/benchmarks/: CMakeLists.txt  main.cc  measurement_operator.cc  primaldual.cc  utilities.cc  utilities.h
cpp/example/: CMakeLists.txt  casa.cc  generate_vis_data.cc  gridding.cc  load_interleaved_bands.cc  preconditioned_primaldual_random_coverage.cc  primal_dual_random_coverage.cc  primal_dual_simulation.cc  primal_dual_time_blocking.cc  primal_dual_time_blocking_multi_ms.cc  primal_dual_time_blocking_random_coverage.cc  primaldual_random_coverage_test.cc  primaldual_reweighted_simulation.cc  primaldual_time_blocking_random_coverage.cc  read_visibilities_h5.cc  script_read_MS.cc  show_image.cc  wideband_blocking_load_uv_data_serial.cc  wideband_blocking_read_and_write_uv_data_parallel.cc  wideband_blocking_read_and_write_uv_data_serial.cc  wideband_primal_dual_time_blocking.cc  wideband_primal_dual_time_blocking_h5.cc  wideband_primal_dual_time_blocking_ms.cc  wideband_primal_dual_time_blocking_random_coverage.cc
cpp/puripsi/: CMakeLists.txt  FFTOperator.cc  FFTOperator.h  MeasurementOperator.cc  MeasurementOperator.h  RMOperator.cc  RMOperator.h  astrodecomposition.cc  astrodecomposition.h  astroio.cc  astroio.h  casacore.cc  casacore.h  cimg.h  compact_operators.h  config.in.h  convolution.h  index_mapping.h  kernels.cc  kernels.h  leastsquares.cc  leastsquares.h  logging.disabled.h  logging.enabled.h  logging.h  operators.cc  operators.h  pfitsio.cc  pfitsio.h  preconditioner.h  projection_kernels.cc  projection_kernels.h  time_blocking.cc  time_blocking.h  types.h  utilities.cc  utilities.h  wproj_utilities.cc  wproj_utilities.h
cpp/tests/: CMakeLists.txt  MeasurementOperator.cc  astrodecomposition.cc  astroio.cc  casacore.cc  common_catch_main.cc  common_mpi_catch_main.cc  data.in.h  directories.in.h  fft_adjoint.cc  fft_adjoint_operator.cc  index_mapping.cc  measurement_operator.cc  operators.cc  preconditioner.cc  puripsi_fitsio.cc  sparse.cc  utils.cc  wproj_utils.cc
images/: logo_BASP_transp.eps
